:zap: perf: optimize dependency graph traversal
  - Add node index for O(1) parent lookups (was O(n))
  - Cache by Maven node object to avoid redundant traversals
  - Use LinkedHashSet instead of TreeSet for faster insertions
  - Add conditional debug logging to skip string concatenation

Signed-off-by: Timotej Kubas <tkubas@redhat.com>
Assisted-By: Claude Sonnet 4.5 <noreply@anthropic.com>