@@ -4,36 +4,38 @@ import com.google.common.graph.Graph;
 import com.google.common.graph.MutableGraph;
 import io.github.chains_project.maven_lockfile.checksum.AbstractChecksumCalculator;
 import io.github.chains_project.maven_lockfile.checksum.RepositoryInformation;
-import io.github.chains_project.maven_lockfile.data.ArtifactId;
-import io.github.chains_project.maven_lockfile.data.ArtifactType;
-import io.github.chains_project.maven_lockfile.data.Classifier;
-import io.github.chains_project.maven_lockfile.data.GroupId;
-import io.github.chains_project.maven_lockfile.data.MavenScope;
-import io.github.chains_project.maven_lockfile.data.VersionNumber;
+import io.github.chains_project.maven_lockfile.data.*;
 import io.github.chains_project.maven_lockfile.reporting.PluginLogManager;
-import java.util.*;
-import java.util.stream.Collectors;
 import org.apache.maven.artifact.Artifact;
 import org.apache.maven.shared.dependency.graph.internal.SpyingDependencyNodeUtils;
+
+import java.util.*;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 public class DependencyGraph {
 
     private final Set<DependencyNode> graph;
+    private final Map<NodeId, DependencyNode> nodeIndex;
 
     public Set<DependencyNode> getRoots() {
         return graph.stream()
                 .filter(node -> node.getParent() == null)
-                .collect(Collectors.toCollection(
-                        () -> new TreeSet<>(Comparator.comparing(DependencyNode::getComparatorString))));
+                .sorted(Comparator.comparing(DependencyNode::getComparatorString))
+                .collect(Collectors.toCollection(LinkedHashSet::new));
     }
 
     private DependencyGraph(Set<DependencyNode> graph) {
-        this.graph = graph == null ? Set.of() : graph;
+        this.graph = graph == null ? Collections.emptySet() : graph;
+
+        this.nodeIndex = this.graph.stream()
+                .collect(Collectors.toMap(
+                        DependencyNode::getNodeId,
+                        Function.identity(),
+                        (a, b) -> a
+                ));
     }
 
-    /**
-     * @return the graph
-     */
     public Set<DependencyNode> getGraph() {
         return graph;
     }
@@ -41,11 +43,9 @@ public class DependencyGraph {
     @Override
     public boolean equals(Object o) {
         if (o == this) return true;
-        if (!(o instanceof DependencyGraph)) {
-            return false;
-        }
-        DependencyGraph dependencyGraph = (DependencyGraph) o;
-        return Objects.equals(graph, dependencyGraph.graph);
+        if (!(o instanceof DependencyGraph)) return false;
+        DependencyGraph that = (DependencyGraph) o;
+        return Objects.equals(graph, that.graph);
     }
 
     @Override
@@ -54,42 +54,59 @@ public class DependencyGraph {
     }
 
     public Optional<DependencyNode> getParentForNode(DependencyNode node) {
-        return graph.stream().filter(n -> n.id.equals(node.getParent())).findFirst();
+        return Optional.ofNullable(nodeIndex.get(node.getParent()));
     }
 
     public static DependencyGraph of(
             MutableGraph<org.apache.maven.shared.dependency.graph.DependencyNode> graph,
             AbstractChecksumCalculator calc,
             boolean reduced) {
-        var roots = graph.nodes().stream()
-                .filter(it -> graph.predecessors(it).isEmpty())
-                .collect(Collectors.toList());
 
-        // Collect unique non-root artifacts and let the calculator pre-warm its cache
+        List<org.apache.maven.shared.dependency.graph.DependencyNode> roots =
+                graph.nodes().stream()
+                        .filter(it -> graph.predecessors(it).isEmpty())
+                        .collect(Collectors.toList());
+
         Set<String> seen = new HashSet<>();
         List<Artifact> uniqueArtifacts = new ArrayList<>();
-        for (var node : graph.nodes()) {
+
+        for (org.apache.maven.shared.dependency.graph.DependencyNode node : graph.nodes()) {
             if (!graph.predecessors(node).isEmpty()) {
-                var a = node.getArtifact();
-                String key = a.getGroupId() + ":" + a.getArtifactId() + ":" + a.getVersion() + ":"
-                        + (a.getClassifier() != null ? a.getClassifier() : "") + ":" + a.getType();
+                Artifact a = node.getArtifact();
+                String key = a.getGroupId() + ":" + a.getArtifactId() + ":" + a.getVersion()
+                        + ":" + (a.getClassifier() != null ? a.getClassifier() : "")
+                        + ":" + a.getType();
+
                 if (seen.add(key)) {
                     uniqueArtifacts.add(a);
                 }
             }
         }
+
         calc.prewarmArtifactCache(uniqueArtifacts);
 
-        Set<DependencyNode> nodes = new TreeSet<>(Comparator.comparing(DependencyNode::getComparatorString));
-        for (var artifact : roots) {
-            createDependencyNode(artifact, graph, calc, true, reduced).ifPresent(nodes::add);
+        Map<org.apache.maven.shared.dependency.graph.DependencyNode, DependencyNode> cache = new HashMap<>();
+
+        Set<DependencyNode> nodes = new LinkedHashSet<>();
+
+        for (org.apache.maven.shared.dependency.graph.DependencyNode root : roots) {
+            Optional<DependencyNode> created =
+                    createDependencyNode(root, graph, calc, true, reduced, cache);
+
+            if (created.isPresent()) {
+                nodes.add(created.get());
+            }
         }
-        // maven dependency tree contains the project itself as a root node. We remove it here.
+
         Set<DependencyNode> dependencyRoots = nodes.stream()
                 .flatMap(v -> v.getChildren().stream())
-                .collect(Collectors.toCollection(
-                        () -> new TreeSet<>(Comparator.comparing(DependencyNode::getComparatorString))));
-        dependencyRoots.forEach(v -> v.setParent(null));
+                .sorted(Comparator.comparing(DependencyNode::getComparatorString))
+                .collect(Collectors.toCollection(LinkedHashSet::new));
+
+        for (DependencyNode v : dependencyRoots) {
+            v.setParent(null);
+        }
+
         return new DependencyGraph(dependencyRoots);
     }
 
@@ -98,27 +115,44 @@ public class DependencyGraph {
             Graph<org.apache.maven.shared.dependency.graph.DependencyNode> graph,
             AbstractChecksumCalculator calc,
             boolean isRoot,
-            boolean reduce) {
-        PluginLogManager.getLog()
-                .debug(String.format("Creating dependency node for: %s, root: %s", node.toNodeString(), isRoot));
-        var groupId = GroupId.of(node.getArtifact().getGroupId());
-        var artifactId = ArtifactId.of(node.getArtifact().getArtifactId());
-        var version = VersionNumber.of(node.getArtifact().getVersion());
-        var classifier = Classifier.of(node.getArtifact().getClassifier());
-        var type = ArtifactType.of(node.getArtifact().getType());
-        PluginLogManager.getLog().debug(String.format("Calculating checksum for %s", node.toNodeString()));
-        var checksum = isRoot ? "" : calc.calculateArtifactChecksum(node.getArtifact());
-        var scope = MavenScope.fromString(node.getArtifact().getScope());
-        PluginLogManager.getLog().debug(String.format("Resolving repository information for %s", node.toNodeString()));
-        var repositoryInformation =
-                isRoot ? RepositoryInformation.Unresolved() : calc.getArtifactResolvedField(node.getArtifact());
+            boolean reduce,
+            Map<org.apache.maven.shared.dependency.graph.DependencyNode, DependencyNode> cache) {
+
+        if (!isRoot) {
+            DependencyNode cached = cache.get(node);
+            if (cached != null) {
+                return Optional.of(cached);
+            }
+        }
+
+        Artifact artifact = node.getArtifact();
+
+        var log = PluginLogManager.getLog();
+        if (log.isDebugEnabled()) {
+            log.debug("Creating dependency node for: " + node.toNodeString() + ", root: " + isRoot);
+        }
+
+        GroupId groupId = GroupId.of(artifact.getGroupId());
+        ArtifactId artifactId = ArtifactId.of(artifact.getArtifactId());
+        VersionNumber version = VersionNumber.of(artifact.getVersion());
+        Classifier classifier = Classifier.of(artifact.getClassifier());
+        ArtifactType type = ArtifactType.of(artifact.getType());
+
+        String checksum = isRoot ? "" : calc.calculateArtifactChecksum(artifact);
+        MavenScope scope = MavenScope.fromString(artifact.getScope());
+
+        RepositoryInformation repositoryInformation =
+                isRoot ? RepositoryInformation.Unresolved()
+                        : calc.getArtifactResolvedField(artifact);
+
         Optional<String> winnerVersion = SpyingDependencyNodeUtils.getWinnerVersion(node);
-        boolean included = winnerVersion.isEmpty();
-        // if there is no conflict marker for this node, we use the version from the artifact
-        String baseVersion = included ? node.getArtifact().getVersion() : winnerVersion.get();
+        boolean included = !winnerVersion.isPresent();
+        String baseVersion = included ? artifact.getVersion() : winnerVersion.get();
+
         if (reduce && !included) {
             return Optional.empty();
         }
+
         DependencyNode value = new DependencyNode(
                 artifactId,
                 groupId,
@@ -129,12 +163,27 @@ public class DependencyGraph {
                 repositoryInformation.getResolvedUrl(),
                 repositoryInformation.getRepositoryId(),
                 calc.getChecksumAlgorithm(),
-                checksum);
+                checksum
+        );
+
+        value.id = new NodeId(groupId, artifactId, version);
+
         value.setSelectedVersion(baseVersion);
         value.setIncluded(included);
-        for (var artifact : graph.successors(node)) {
-            createDependencyNode(artifact, graph, calc, false, reduce).ifPresent(value::addChild);
+
+        if (!isRoot) {
+            cache.put(node, value);
         }
+
+        for (org.apache.maven.shared.dependency.graph.DependencyNode child : graph.successors(node)) {
+            Optional<DependencyNode> created =
+                    createDependencyNode(child, graph, calc, false, reduce, cache);
+
+            if (created.isPresent()) {
+                value.addChild(created.get());
+            }
+        }
+
         return Optional.of(value);
     }
 }
